# FTP_Server

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  UI.c  UI.h  csapp.c  csapp.h  format.c  format.h  ftp_client.c  ftp_com.c  ftp_com.h  ftp_server.c  utils.c  utils.h
test/: CMakeLists.txt  test_seg_file.c
